feat: log requested people demand
